@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements.  See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License.  You may obtain a copy of the License at
 
-  http://www.apache.org/licenses/LICENSE-2.0
+    Licensed to the Apache Software Foundation (ASF) under one or more
+    contributor license agreements.  See the NOTICE file distributed with
+    this work for additional information regarding copyright ownership.
+    The ASF licenses this file to You under the Apache License, Version 2.0
+    (the "License"); you may not use this file except in compliance with
+    the License.  You may obtain a copy of the License at
 
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
+         http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -21,7 +23,7 @@
   <parent>
     <groupId>org.apache.camel</groupId>
     <artifactId>components</artifactId>
-    <version>2.19.0-SNAPSHOT</version>
+    <version>2.20.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>camel-spring</artifactId>
@@ -30,7 +32,6 @@
   <packaging>jar</packaging>
 
   <properties>
-    <!-- use spring-all-version-range to support camel-spring-dm also -->
     <camel.osgi.import>
       !org.springframework.boot.*,
       !org.springframework.context.annotation.*;resolution:=optional,
@@ -39,6 +40,15 @@
       !org.apache.camel.component.event,
       !org.apache.camel.language.spel,
       !org.apache.camel.core.xml*,
+      org.apache.camel.model;${camel.osgi.import.strict.version},
+      org.apache.camel.model.cloud;${camel.osgi.import.strict.version},
+      org.apache.camel.model.config;${camel.osgi.import.strict.version},
+      org.apache.camel.model.dataformat;${camel.osgi.import.strict.version},
+      org.apache.camel.model.language;${camel.osgi.import.strict.version},
+      org.apache.camel.model.loadbalancer;${camel.osgi.import.strict.version},
+      org.apache.camel.model.rest;${camel.osgi.import.strict.version},
+      org.apache.camel.model.transformer;${camel.osgi.import.strict.version},
+      org.apache.camel.model.validator;${camel.osgi.import.strict.version},
       org.apache.camel.*;${camel.osgi.import.strict.version},
       org.springframework*;version="${spring-all-version-range}",
       org.osgi.service.event;resolution:=optional,
@@ -101,6 +111,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context-support</artifactId>
       <scope>test</scope>
@@ -153,8 +168,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>xmlunit</groupId>
-      <artifactId>xmlunit</artifactId>
+      <groupId>org.xmlunit</groupId>
+      <artifactId>xmlunit-core</artifactId>
       <version>${xmlunit-version}</version>
       <scope>test</scope>
     </dependency>
@@ -181,6 +196,12 @@
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
       <version>${cglib-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj-version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -305,7 +326,6 @@
             <phase>process-classes</phase>
             <configuration>
               <target>
-                <taskdef name="schemagen" classname="com.sun.tools.jxc.SchemaGenTask" classpathref="maven.plugin.classpath" />
                 <echo>Copying code together for the XSD generation</echo>
                 <mkdir dir="${project.build.directory}/schema-src" />
                 <copy todir="${project.build.directory}/schema-src">
@@ -331,15 +351,6 @@
                     <include name="org/apache/camel/package-info.java" />
                   </fileset>
                 </copy>
-                <echo>Generating XSD schema</echo>
-                <mkdir dir="${project.build.directory}/schema" />
-                <schemagen srcdir="${project.build.directory}/schema-src" destdir="${project.build.directory}/schema">
-                    <schema namespace="http://camel.apache.org/schema/spring" file="camel-spring.xsd" />
-                    <compilerarg line="-target ${jdk.version}"/>
-                    <compilerarg line="-source ${jdk.version}"/>
-                    <classpath refid="maven.compile.classpath" />
-                </schemagen>
-
               </target>
             </configuration>
             <goals>
@@ -568,31 +579,135 @@
     </profile>
 
     <profile>
+      <id>jdk8</id>
+      <activation>
+        <jdk>(,1.8]</jdk>
+      </activation>
+      <dependencies>
+        <!-- xmltokenizer using woodstox -->
+        <dependency>
+          <groupId>org.codehaus.woodstox</groupId>
+          <artifactId>woodstox-core-asl</artifactId>
+          <version>${woodstox-version}</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.8</version>
+            <executions>
+              <execution>
+                <id>generate-schema</id>
+                <phase>process-classes</phase>
+                <configuration>
+                  <target>
+                    <echo>Generating XSD schema</echo>
+                    <taskdef name="schemagen" classname="com.sun.tools.jxc.SchemaGenTask" classpathref="maven.plugin.classpath" />
+                    <mkdir dir="${project.build.directory}/schema" />
+                    <schemagen srcdir="${project.build.directory}/schema-src" destdir="${project.build.directory}/schema">
+                      <schema namespace="http://camel.apache.org/schema/spring" file="camel-spring.xsd" />
+                      <compilerarg line="-target ${jdk.version}"/>
+                      <compilerarg line="-source ${jdk.version}"/>
+                      <classpath refid="maven.compile.classpath" />
+                    </schemagen>
+                  </target>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
       <id>jdk9-build</id>
       <activation>
         <jdk>9</jdk>
       </activation>
+      <dependencies>
+        <!-- xmltokenizer using woodstox -->
+        <dependency>
+          <groupId>org.codehaus.woodstox</groupId>
+          <artifactId>woodstox-core-asl</artifactId>
+          <version>${woodstox-version}</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
       <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-antrun-plugin</artifactId>
-              <dependencies>
-                <dependency>
-                  <groupId>javax.xml.bind</groupId>
-                  <artifactId>jaxb-api</artifactId>
-                  <version>${jaxb-version}</version>
-                </dependency>
-                <dependency>
-                  <groupId>javax.activation</groupId>
-                  <artifactId>activation</artifactId>
-                  <version>1.1.1</version>
-                </dependency>
-              </dependencies>
-            </plugin>
-          </plugins>
-        </pluginManagement>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-modules java.xml.bind,java.xml.ws --add-opens java.base/java.lang=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-exports=java.xml.bind/com.sun.xml.internal.bind=ALL-UNNAMED --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2=ALL-UNNAMED --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime.reflect=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.8</version>
+            <executions>
+              <execution>
+                <id>list-source-files-for-schema-generation</id>
+                <phase>process-classes</phase>
+                <configuration>
+                  <target>
+                    <taskdef resource="net/sf/antcontrib/antcontrib.properties" classpathref="maven.plugin.classpath" />
+                    <path id ="source.files.list">
+                      <fileset dir="${project.build.directory}/schema-src">
+                        <include name="**/*.java" />
+                      </fileset>
+                    </path>
+                    <property name="source.files.property" refid="source.files.list"/>
+                    <propertyregex property="schema.source.formatted" input="${source.files.property}" regexp=":" replace=" " global="true" />
+                    <property name="schema.source.files" value="${schema.source.formatted}"/>
+                    <echo>Schema files ${schema.source.files}</echo>
+                  </target>
+                  <exportAntProperties>true</exportAntProperties>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>cpy-schema</id>
+                <phase>process-test-sources</phase>
+                <configuration>
+                  <target>
+                    <echo>Copying XSD schema to be included in JAR</echo>
+                    <move file="${project.basedir}/schema1.xsd" tofile="${project.build.directory}/schema/camel-spring.xsd" />
+                    <delete file="${project.basedir}/schema2.xsd"/>
+                  </target>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>generate schema</id>
+                <phase>generate-test-sources</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <executable>schemagen</executable>
+              <commandlineArgs>-cp %classpath ${schema.source.files}</commandlineArgs>
+            </configuration>
+          </plugin>
+        </plugins>
       </build>
     </profile>
   </profiles>
